# telco-churn-mlops

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.mlflow  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: config.yaml
src/api/: main.py
src/data/: preprocessing.py
src/models/: train.py
src/pipeline/: comparison.py  run.py  visualization.py
src/utils/: logger.py
tests/: conftest.py  test_api.py  test_preprocessing.py
